--- a/frontend/index.html
+++ b/frontend/index.html
@@ -26,7 +26,9 @@
             <div id="nav-bar" class="nav-grid">
                 <div class="nav-options">
                     <ul>
-                        <a href="../frontend/shop.html"><li>SHOP</li></a>
+                        <a href="../frontend/shop.html">
+                            <li>SHOP</li>
+                        </a>
                         <li>ABOUT</li>
                         <li>CONTACT</li>
                     </ul>
@@ -68,7 +70,12 @@
             </div>
         </div>
     </nav>
+
     <div class="nav-padding"></div>
+
+    <div id="filter" style="display: none;"></div>
+
+
 
 
 
@@ -82,11 +89,95 @@
     <div id="add-product-button">
         <button id="go-button">Post New Product</button>
     </div>
-    <div class="result-padding">
-    <!-- Result div that stores all rendered products  -->
-    <div id="result"></div>
-</div>
 
+    <div class="landingpage">
+        <div class="star1">
+            <img src="../frontend/media/Star 1.svg" alt="star1">
+
+        </div>
+        <div class="star2">
+            <img src="../frontend/media/Star 2.svg" alt="star2">
+
+        </div>
+        <div class="star3">
+            <img src="../frontend/media/Star 3.svg" alt="star3">
+
+        </div>
+        <div class="landingpage_title">
+            <h1>Papori</h1>
+            <p>Nau Mai, Haere Mai</p>
+        </div>
+        <div class="landingpage_logo">
+            <img src="../frontend/media/logo_papori.svg" alt="logo_papori">
+            <p>Scroll</p>
+        </div>
+    </div>
+
+    <div class="result-padding">
+        <!-- Result div that stores all rendered products  -->
+        <div id="result"></div>
+    </div>
+
+    <footer>
+        <div class="footer-top">
+
+            <div class="footer-top-info1 wrapper1" id="footer-top-info1">
+                <div class="title">
+                    <p>Customer Care</p>
+                </div>
+                <div class="info">
+                    <a href="#">Contact</a>
+                    <a href="#">Delivery & Shipping</a>
+                    <a href="#">Returns & Exchanges</a>
+                    <a href="#">My Account</a>
+                </div>
+
+            </div>
+            <div class="footer-top-header wrapper1" id="footer-top-header">
+                <p>Papori</p>
+            </div>
+            <div class="footer-top-info1 wrapper1" id="footer-top-info1">
+                <div class="title">
+                    <p>Info</p>
+                </div>
+                <div class="info">
+                    <a href="#">Stockist</a>
+                    <a href="#">Size Guide</a>
+                    <a href="#">Privacy Policy</a>
+                    <a href="#">Terms & Conditions</a>
+                </div>
+
+            </div>
+        </div>
+        <div class="footer-middle">
+            <div class="socials wrapper1">
+
+                <p>instagram</p>
+                <p>tiktok</p>
+                <p>facebook</p>
+                <p>twitter</p>
+            </div>
+            <div class="newsletter wrapper1">
+                <input type="text" name="newsletter" id="newsletter" placeholder="Email Address">
+                <button>Sign Me Up</button>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <div class="copyright wrapper1">
+                <p>© 2021 Papori, all rights reserved.
+                </p>
+            </div>
+            <div class="footer-logo wrapper1">
+                <img src="../frontend/media/logo_papori_footer.svg" alt="logo_nav.svg">
+            </div>
+            <div class="conditions wrapper1">
+                <a href="#">Legal Notice</a>
+                <a href="#">Designed By BMJ</a>
+                <a href="#">Built by BMJ</a>
+            </div>
+        </div>
+
+    </footer>
 
     <!-- Edit Modal -->
     <div class="modal fade" id="editModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
