--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,12 +21,16 @@
 
 <body>
 
+    <div id="filter" style="display: none;"></div>
+
     <nav>
         <div class="nav-wrapper">
             <div id="nav-bar" class="nav-grid">
                 <div class="nav-options">
                     <ul>
-                        <a href="../frontend/shop.html"><li>SHOP</li></a>
+                        <a href="../frontend/shop.html">
+                            <li>SHOP</li>
+                        </a>
                         <li>ABOUT</li>
                         <li>CONTACT</li>
                     </ul>
@@ -83,9 +87,9 @@
         <button id="go-button">Post New Product</button>
     </div>
     <div class="result-padding">
-    <!-- Result div that stores all rendered products  -->
-    <div id="result"></div>
-</div>
+        <!-- Result div that stores all rendered products  -->
+        <div id="result"></div>
+    </div>
 
 
     <!-- Edit Modal -->
@@ -163,14 +167,13 @@
     <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="deleteModalLabel">Confirm Delete</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                <div class="delete-modal-header">
+                    <h5 class="modal-title" id="deleteModalLabel">DELETE LISTING</h5>
                 </div>
-                <div class="modal-body">
-
-                </div>
-                <div class="modal-footer">
+                <div class="delete-modal-body">
+                    <p class="confirm-delete-text">Are you sure you want to delete <br> this listing?</p>
+                    <button type="button" class="btn btn-secondary delete-modal-cancel-button"
+                        data-bs-dismiss="modal">CANCEL</button>
                     <button id="submitDelete" name="submitDeleteButton" type="submit"
                         class="btn btn-primary delete-button" data-bs-dismiss="modal">CONFIRM</button>
 
