--- a/frontend/shop.html
+++ b/frontend/shop.html
@@ -1,225 +1,207 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- bootstrap icons -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"
-    />
-    <!-- Google Icons -->
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
-    />
-    <!-- bootstraps -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
-      crossorigin="anonymous"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="css/styles.css" />
-    <title>Shop</title>
-  </head>
+  <!-- bootstrap icons -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" />
+  <!-- Google Icons -->
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+  <!-- bootstraps -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous" />
 
-  <body>
-    <nav>
-        <div class="nav-wrapper">
-          <div id="nav-bar" class="nav-grid">
-            <div class="nav-options">
-              <ul>
-                  <li>SHOP</li>
-                  <li>ABOUT</li>
-                  <li>CONTACT</li>
-              </ul>
-            </div>
-            <div class="nav-logo">
-              <img src="../frontend/media/nav-logo.svg" alt="nav logo">
-            </div>
-            <div class="nav-tools">
-              <div id="nav-search" class="search-button">
-                  <p id="search-type">SEARCH</p>
-                <span id="search-icon" class="material-symbols-outlined"> search </span>
-              </div>
-              <div id="user-details" class="account-button">
-                <!-- <span id="account-symbol" class="material-symbols-outlined"> account_circle </span>
+  <link rel="stylesheet" href="css/styles.css" />
+  <title>Shop</title>
+</head>
+
+<body>
+  <nav>
+    <div class="nav-wrapper">
+      <div id="nav-bar" class="nav-grid">
+        <div class="nav-options">
+          <ul>
+            <li>SHOP</li>
+            <li>ABOUT</li>
+            <li>CONTACT</li>
+          </ul>
+        </div>
+        <div class="nav-logo">
+          <img src="../frontend/media/nav-logo.svg" alt="nav logo">
+        </div>
+        <div class="nav-tools">
+          <div id="nav-search" class="search-button">
+            <p id="search-type">SEARCH</p>
+            <span id="search-icon" class="material-symbols-outlined"> search </span>
+          </div>
+          <div id="user-details" class="account-button">
+            <!-- <span id="account-symbol" class="material-symbols-outlined"> account_circle </span>
                 <button id="account-button">ACCOUNT</button>
               </div> -->
-            </div>
-          </div>
-              <div class="search-row">
-                  <div class="search-message">
-                      <h2>Search our community for local buisnesses or products.</h2>
-                  </div>
-                  <div class="search-bar">
-                      <input id="search-bar-input" type="search" name="search-bar" placeholder="Search Pāpori..." value=""><i id="search-button-input" class="bi bi-search pointer"></i>
-            </div>
-                  </div>
-                  <div id="search-notifications"></div>
-              </div>
-            </div>
           </div>
         </div>
-        <div id="account-details">
-            <div class="account-functions">
-               <p>ACCOUNT</p>
-            </div>
-            <div class="account-functions">
-                <p id="sign-out-button">LOGOUT</p>
-            </div>
+        <div class="search-row">
+          <div class="search-message">
+            <h2>Search our community for local buisnesses or products.</h2>
           </div>
-      </nav>
-
-      <div class="nav-padding"></div>
-
-    <!-- Add Product Form  -->
-    <div id="add-product-div" style="display: none;"></div>
-
-
-
-    <div style="display: none;" id="add-product-button">
-        <button style="display: none;" id="go-button">Post New Product</button>
+          <div class="search-bar">
+            <input id="search-bar-input" type="search" name="search-bar" placeholder="Search Pāpori..." value=""><i
+              id="search-button-input" class="bi bi-search pointer"></i>
+          </div>
+        </div>
+        <div id="search-notifications"></div>
+      </div>
     </div>
+    </div>
+    </div>
+    <div id="account-details">
+      <div class="account-functions">
+        <p>ACCOUNT</p>
+      </div>
+      <div class="account-functions">
+        <p id="sign-out-button">LOGOUT</p>
+      </div>
+    </div>
+  </nav>
 
-    <header>
-        <div class="header-title">
-        <h3>Shop</h3>
+  <div class="nav-padding"></div>
+
+  <!-- Add Product Form  -->
+  <div id="add-product-div" style="display: none;"></div>
+
+
+
+  <div style="display: none;" id="add-product-button">
+    <button style="display: none;" id="go-button">Post New Product</button>
+  </div>
+
+  <header>
+    <div class="header-title">
+      <h3>Shop</h3>
     </div>
     <div class="filer">
-        <button id="filter">SORT BY <span class="material-symbols-outlined">
+      <button id="filter">SORT BY <span class="material-symbols-outlined">
           sort
-          </span></button>
-          <div class="filter-dropdown" id="filter-dropdown">
-            <ul>
-              <li>NEWEST <input type="radio" name="filter" id=""></li>
-              <LI>PRICE <input type="radio" name="filter" id=""></LI>
-              <LI>A - Z <input type="radio" name="filter" id=""></LI>
-            </ul>
-          </div>
+        </span></button>
+      <div class="filter-dropdown" id="filter-dropdown">
+        <ul>
+          <li>NEWEST <input type="radio" name="filter" id=""></li>
+          <LI>PRICE <input type="radio" name="filter" id=""></LI>
+          <LI>A - Z <input type="radio" name="filter" id=""></LI>
+        </ul>
+      </div>
     </div>
-    </header>
+  </header>
 
-    <div class="result-padding">
+  <div class="result-padding">
     <!-- Result div that stores all rendered products  -->
     <div id="result"></div>
-</div>
+  </div>
 
-     <!-- Edit Modal -->
-     <div class="modal fade" id="editModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <h5 class="modal-title" id="exampleModalLabel">Edit Listing</h5></strong>
-                    <div id="image-preview"></div>
-                    <div id="projectForm">
-
-                        <label for="productName">TITLE</label>
-                        <br>
-                        <input class="edit-modal-input" type="text" id="productName" name="productName">
-                        <br></br>
-
-                        <label for="productPrice">PRICE</label>
-                        <br>
-                        <input class="edit-modal-input" type="text" id="productPrice" name="productPrice">
-                        <br></br>
-
-                        <label for="productDescription">DESCRIPTION</label>
-                        <br>
-                        <input class="edit-modal-input" type="text" id="productDescription" name="productDescription">
-                        <br></br>
-
-                        <label for="imgUrl">PRODUCT IMAGE</label>
-                        <br>
-                        <input class="edit-modal-input" type="text" id="imgUrl" name="imgUrl">
-                        <br></br>
-
-                    </div>
-                    <button type="button" class="btn btn-secondary edit-modal-button1"
-                        data-bs-dismiss="modal">CANCEL</button>
-                    <button id="updateProduct" name="projectButton" type="submit"
-                        class="btn btn-primary edit-modal-button2" data-bs-dismiss="modal">CONFIRM</button>
-
-                </div>
-
-            </div>
+  <!-- Edit Modal -->
+  <div class="modal fade" id="editModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
-    </div>
+        <div class="modal-body">
+          <h5 class="modal-title" id="exampleModalLabel">Edit Listing</h5></strong>
+          <div id="image-preview"></div>
+          <div id="projectForm">
 
-    <!-- End of edit Modal  -->
+            <label for="productName">TITLE</label>
+            <br>
+            <input class="edit-modal-input" type="text" id="productName" name="productName">
+            <br></br>
 
-    <!-- Post Comment Modal -->
-    <div class="modal fade" id="commentModal" tabindex="-1" aria-labelledby="commentModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="commentModalLabel">Post a comment:</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <div id="projectForm">
-                        <label for="productComment">Enter your comment:</label>
-                        <textarea class="form-control" id="productComment" rows="4"></textarea>
-                    </div>
-                </div>
-                <div class="modal-footer">
-                    <button id="submitComment" name="submitCommentButton" type="submit" class="btn btn-primary"
-                        data-bs-dismiss="modal">Submit Comment</button>
+            <label for="productPrice">PRICE</label>
+            <br>
+            <input class="edit-modal-input" type="text" id="productPrice" name="productPrice">
+            <br></br>
 
-                </div>
-            </div>
+            <label for="productDescription">DESCRIPTION</label>
+            <br>
+            <input class="edit-modal-input" type="text" id="productDescription" name="productDescription">
+            <br></br>
+
+            <label for="imgUrl">PRODUCT IMAGE</label>
+            <br>
+            <input class="edit-modal-input" type="text" id="imgUrl" name="imgUrl">
+            <br></br>
+
+          </div>
+          <button type="button" class="btn btn-secondary edit-modal-button1" data-bs-dismiss="modal">CANCEL</button>
+          <button id="updateProduct" name="projectButton" type="submit" class="btn btn-primary edit-modal-button2"
+            data-bs-dismiss="modal">CONFIRM</button>
+
         </div>
+
+      </div>
     </div>
+  </div>
 
-    <!-- End of Post Comment Modal  -->
+  <!-- End of edit Modal  -->
 
-     <!-- Confirm Delete Modal -->
-     <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="deleteModalLabel">Confirm Delete</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-
-                </div>
-                <div class="modal-footer">
-                    <button id="submitDelete" name="submitDeleteButton" type="submit"
-                        class="btn btn-primary delete-button" data-bs-dismiss="modal">CONFIRM</button>
-
-                </div>
-            </div>
+  <!-- Post Comment Modal -->
+  <div class="modal fade" id="commentModal" tabindex="-1" aria-labelledby="commentModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="commentModalLabel">Post a comment:</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
+        <div class="modal-body">
+          <div id="projectForm">
+            <label for="productComment">Enter your comment:</label>
+            <textarea class="form-control" id="productComment" rows="4"></textarea>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button id="submitComment" name="submitCommentButton" type="submit" class="btn btn-primary"
+            data-bs-dismiss="modal">Submit Comment</button>
+
+        </div>
+      </div>
     </div>
+  </div>
 
-    <!-- End of Confirm Delete Modal  -->
+  <!-- End of Post Comment Modal  -->
 
+  <!-- Confirm Delete Modal -->
+  <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="delete-modal-header">
+          <h5 class="modal-title" id="deleteModalLabel">DELETE LISTING</h5>
+        </div>
+        <div class="delete-modal-body">
+          <p class="confirm-delete-text">Are you sure you want to delete <br> this listing?</p>
+          <button type="button" class="btn btn-secondary delete-modal-cancel-button"
+            data-bs-dismiss="modal">CANCEL</button>
+          <button id="submitDelete" name="submitDeleteButton" type="submit" class="btn btn-primary delete-button"
+            data-bs-dismiss="modal">CONFIRM</button>
 
-    <!-- jquery -->
-    <script
-      src="https://kit.fontawesome.com/ab86417da5.js"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://code.jquery.com/jquery-3.4.1.min.js"
-      integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-      crossorigin="anonymous"
-    ></script>
+        </div>
+      </div>
+    </div>
+  </div>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-      crossorigin="anonymous"
-    ></script>
+  <!-- End of Confirm Delete Modal  -->
+  <!-- jquery -->
+  <script src="https://kit.fontawesome.com/ab86417da5.js" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 
-    <script src="js/script.js"></script>
-  </body>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+    crossorigin="anonymous"></script>
+
+  <script src="js/script.js"></script>
+</body>
+
 </html>
