--- a/frontend/login.html
+++ b/frontend/login.html
@@ -4,67 +4,34 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <!-- bootstrap icons -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/styles.css">
   <title>Login</title>
 </head>
 
 <body>
-  <!-- 
-  <nav>
-    <div class="nav-wrapper">
-      <div id="nav-bar" class="nav-grid">
-        <div class="nav-options">
-          <ul>
-            <li>SHOP</li>
-            <li>ABOUT</li>
-            <li>CONTACT</li>
-          </ul>
-        </div>
-        <div class="nav-logo">
-          <img src="../frontend/media/nav-logo.svg" alt="nav logo">
-        </div>
-        <div class="nav-tools">
-          <div id="nav-search" class="search-button">
-            <p id="search-type">SEARCH
-            <p>
-              <span class="material-symbols-outlined"> search </span>
-          </div>
-          <div id="user-details" class="account-button">
-            <span class="material-symbols-outlined"> account_circle </span>
-          </div>
-        </div>
-        <div class="search-row">
-          <div class="search-message">
-            <h2>Search our community for local buisnesses or products.</h2>
-          </div>
-          <div class="search-bar">
-            <input id="search-bar-input" type="search" name="search-bar" placeholder="Search Pāpori..." value=""><i
-              id="search-button-input" class="bi bi-search pointer"></i>
-          </div>
-        </div>
-        <div id="search-notifications"></div>
-      </div>
-    </div>
-    </div>
-    </div>
-  </nav> -->
 
   <div id="tools">
     <div class="login-banner">
-      <i class="bi bi-x"></i>
+      <a href="index.html">
+        <i class="bi bi-x"></i>
+      </a>
     </div>
-    <h1>Sign In</h1>
-    <h2>Don't have an account? <a href="signup.html">Sign Up</a></h2>
+    <h1 class="sign-in-title">Sign In</h1>
+    <h2 class="sign-in-subtitle">Don't have an account? <a href="signup.html"><u>Sign Up</u></a></h2>
 
     <br>
 
     <form id="login-form" action="javascript:void(0);">
-      <label for="username-input">Username* </label>
-      <input id="username-input" name="username-input" type="text"> <br>
-      <label for="password-input">Password* </label>
-      <input id="password-input" name="password-input" type="password"> <br>
-      <button id="login-button">Login</button>
+      <label class="login-label" for="username-input">Username* </label>
+      <br>
+      <input class="login-input" id="username-input" name="username-input" type="text"> <br>
+      <label class="login-label" for="password-input">Password* </label>
+      <br>
+      <input class="login-input" id="password-input" name="password-input" type="password"> <br>
+      <button id="login-button">Sign In</button>
     </form>
   </div>
 
