--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -4,28 +4,39 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- bootstrap icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Sign Up</title>
 </head>
 
 <body>
 
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="login.html">Login</a>
-    </nav>
+
     <div id="tools">
-        <h1>Sign up to The Neighbourhood</h1>
-        <h2>Enter your login details</h2>
+        <div class="login-banner">
+            <a href="index.html">
+                <i class="bi bi-x"></i>
+            </a>
+        </div>
+        <h1 class="sign-up-title">Sign Up</h1>
+        <h2 class="sign-up-subtitle">Have an account? <a href="login.html"><u>Sign In</u></a></h2>
         <br>
         <form id="signup-form" action="javascript:void(0);">
-            <label for="username-input">Username: </label>
-            <input id="username-input" name="username-input" type="text">
-            <label for="password-input">Password: </label>
-            <input id="password-input" name="password-input" type="password">
-            <label for="password-input">Profile Image URL: </label>
-            <input id="image-url-input" name="image-url-input" type="text">
-            <button id="signup-button">Sign Up!</button>
+            <label class="signup-label" for="username-input">Username* </label>
+            <br>
+            <input class="signup-input" id="username-input" name="username-input" type="text">
+            <br>
+            <label class="signup-label" for="password-input">Password* </label>
+            <br>
+            <input class="signup-input" id="password-input" name="password-input" type="password">
+            <br>
+            <label class="signup-label" for="password-input">Profile Image URL* </label>
+            <br>
+            <input class="signup-input" id="image-url-input" name="image-url-input" type="text">
+            <br>
+            <button id="signup-button">Create Account</button>
         </form>
     </div>
 
