--- a/frontend/index.html
+++ b/frontend/index.html
@@ -73,20 +73,12 @@
         </div>
     </nav>
 
-    <div class="nav-padding"></div>
+    <!-- <div class="nav-padding"></div> -->
 
     <div id="filter" style="display: none;"></div>
 
-
-
-
-
-
-
     <!-- Add Product Form  -->
     <div id="add-product-div"></div>
-
-
 
     <div id="add-product-button">
         <button id="go-button">Post New Product</button>
@@ -115,11 +107,43 @@
         </div>
     </div>
 
+    <!-- ================ -->
+    <!-- gallery -->
+    <!-- ================ -->
+    <div class="gallery-cont">
+        <div class="gallery">
+            <h6>trending now</h6>
+            <div id="gallery0"></div>
+            <div class="gallery-button">
+                <button>browse more</button>
+            </div>
+        </div>
+
+        <div class="gallery">
+            <h6>Whats New</h6>
+            <div id="gallery1"></div>
+            <div class="gallery-button">
+                <button>browse more</button>
+            </div>
+        </div>
+        <div class="gallery">
+            <h6>Our Top Sellers</h6>
+            <div id="gallery2"></div>
+            <div class="gallery-button">
+                <button>browse more</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- ================ -->
+    <!-- gallery end -->
+    <!-- ================ -->
+
+
     <div class="result-padding">
         <!-- Result div that stores all rendered products  -->
         <div id="result"></div>
     </div>
-
 
     <footer>
         <div class="footer-top">
@@ -139,7 +163,7 @@
             <div class="footer-top-header wrapper1" id="footer-top-header">
                 <p>Papori</p>
             </div>
-            <div class="footer-top-info1 wrapper1" id="footer-top-info1">
+            <div class="footer-top-info1 wrapper1 right" id="footer-top-info1 ">
                 <div class="title">
                     <p>Info</p>
                 </div>
@@ -274,9 +298,6 @@
     </div>
 
     <!-- End of Confirm Delete Modal  -->
-
-
-
 
     <!-- jquery -->
     <script src="https://kit.fontawesome.com/ab86417da5.js" crossorigin="anonymous"></script>
