--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,6 +20,7 @@
 </head>
 
 <body>
+    <div id="filter" style="display: none;"></div>
 
     <nav>
         <div class="nav-wrapper">
@@ -180,6 +181,23 @@
     </div>
 
     <!-- End of Confirm Delete Modal  -->
+
+    <!-- product Modal -->
+  <div id="productModal" class="productModal">
+    <div class="product-modal-container">
+      <div class="product-modal-grid">
+        <i id="close-modal" class="fa-solid fa-x"></i>
+        <div id="product-owner" class="product-owner">
+        </div>
+        <div id="product-name" class="product-name"></div>
+        <div id="product-description"  class="product-description"><p>The application should have functionality to show/hide UI components based on user interaction. For example, it may have multiple screens or use a modal dialog.</p>
+      </div>
+        <div id="product-image" class="product-image">
+      </div>
+    </div>
+  </div>
+
+  <!-- end of product modal -->
 
 
 
