fixed merge issues

--- a/frontend/shop.html
+++ b/frontend/shop.html
@@ -185,7 +185,10 @@
             data-bs-dismiss="modal">CANCEL</button>
           <button id="submitDelete" name="submitDeleteButton" type="submit" class="btn btn-primary delete-button"
             data-bs-dismiss="modal">CONFIRM</button>
-
+      </div>
+    </div>
+    </div>
+  </div>
     <!-- End of Post Comment Modal  -->
 
       <!-- product Modal -->
@@ -226,7 +229,12 @@
         </div>
       </div>
     </div>
-  </div>
+
+
+  <div id="gallery0" style="display: none;"></div>
+  <div id="gallery1" style="display: none;"></div>
+  <div id="gallery2" style="display: none;"></div>
+
 
   <!-- End of Confirm Delete Modal  -->
   <!-- jquery -->
