resolved merge issues

--- a/frontend/editaccount.html
+++ b/frontend/editaccount.html
@@ -97,9 +97,11 @@
         <a href="account.html"> <button class="back-button">BACK TO ACCOUNT</button> </a>
     </div>
 
-    <div id="edit-account-image">
+    <div id="edit-profile-image">
         <div id="account-image"></div>
     </div>
+
+    <div id="account-profile-header" style="display: none;"></div>
 
 
     <!-- FORM  -->
@@ -220,6 +222,17 @@
             </div>
         </div>
     </div>
+
+    <div id="filter" style="display: none;"></div>
+    <div id="result" style="display: none;"></div>
+    <div id="account-result" style="display: none;"></div>
+    <div id="gallery0" style="display: none;"></div>
+    <div id="gallery1" style="display: none;"></div>
+    <div id="gallery-swiper" style="display: none;"></div>
+    <div id="gallery2" style="display: none;"></div>
+    <div id="productModal" style="display: none;"></div>
+    <div id="close-modal" style="display: none;"></div>
+    <div id="open-image" style="display: none;"></div>
 
     <!-- End of Change Password Modal  -->
 
