--- a/frontend/index.html
+++ b/frontend/index.html
@@ -220,6 +220,12 @@
     <div id="add-product-button" style="display: none;">
         <button id="go-button">Post New Product</button>
     </div>
+    <div id="account-result" style="display: none;"></div>
+    <div id="edit-profile-image" style="display: none;"></div>
+    <div id="account-profile-header" style="display: none;"></div>
+    <div id="username-input" style="display: none;"></div>
+    <div id="edit-password-input" style="display: none;"></div>
+    <div id="profilepic-input" style="display: none;"></div>
 
     <!-- delete these  -->
 
