--- a/frontend/shop.html
+++ b/frontend/shop.html
@@ -316,8 +316,14 @@
 
   <div id="gallery0" style="display: none;"></div>
   <div id="gallery1" style="display: none;"></div>
+  <div id="gallery-swiper" style="display: none;"></div>
   <div id="gallery2" style="display: none;"></div>
-
+  <div id="account-result" style="display: none;"></div>
+  <div id="edit-profile-image" style="display: none;"></div>
+  <div id="account-profile-header" style="display: none;"></div>
+  <div id="username-input" style="display: none;"></div>
+  <div id="edit-password-input" style="display: none;"></div>
+  <div id="profilepic-input" style="display: none;"></div>
 
   <!-- End of Confirm Delete Modal  -->
   <!-- jquery -->
