--- a/frontend/editaccount.html
+++ b/frontend/editaccount.html
@@ -84,11 +84,11 @@
 
 
     <!-- Add Product Form  -->
-    <div id="add-product-div"></div>
+    <div id="add-product-div" style="display: none;"></div>
 
 
 
-    <div id="add-product-button">
+    <div id="add-product-button" style="display: none;">
         <button id="go-button">Post New Product</button>
     </div>
 
@@ -188,8 +188,6 @@
                 <a href="#">Built by BMJ</a>
             </div>
         </div>
-
-
     </footer>
 
     <!-- Change Password Modal -->
@@ -202,9 +200,9 @@
                 </div>
                 <div class="update-password-modal-body">
 
-                    <label class="edit-password-label" for="edit-password-input">Old password: </label>
+                    <label class="edit-password-label-old" for="edit-password-input-old">Old password: </label>
                     <br>
-                    <input class="edit-password-input" id="edit-password-input" name="edit-password-input"
+                    <input class="edit-password-input-old" id="edit-password-input-old" name="edit-password-input-old"
                         type="password"> <br>
 
                     <label class="edit-password-label" for="edit-password-input">New password: </label>
