--- a/frontend/index.html
+++ b/frontend/index.html
@@ -64,7 +64,9 @@
         </div>
         <div id="account-details">
             <div class="account-functions">
-                <p>ACCOUNT</p>
+                <a href="account.html">
+                    <p>ACCOUNT</p>
+                </a>
             </div>
             <div class="account-functions">
                 <p id="sign-out-button">LOGOUT</p>
@@ -325,36 +327,62 @@
         <div class="product-modal-container">
             <div class="product-modal-grid">
                 <i id="close-modal" class="fa-solid fa-x"></i>
-                <div id="product-owner" class="product-owner">
-                </div>
-                <div id="product-name" class="product-name"></div>
-                <div id="product-description" class="product-description">
-                    <p>The application should have functionality to show/hide UI components based on user interaction.
-                        For example, it may have multiple screens or use a modal dialog.</p>
-                </div>
                 <div id="product-image" class="product-image">
+                </div>
+                <div class="product-title">
+                    <div id="product-name" class="product-name"></div>
+                    <div id="product-owner" class="product-owner">
+                    </div>
+                </div>
+                <div id="modal-description" style="display: none;" class="modal-description">
+                </div>
+                <div class="modal-message-container">
+                    <div class="name-underline"></div>
+                    <div class="modal-message">
+                        <h3>INQUIRE</h3>
+                        <div class="modal-message-inputs">
+                            <input placeholder="Write title here . . ." type="text">
+                            <input class="modal-message-large" placeholder="Write message here . . ." type="text">
+                        </div>
+                        <div class="modal-message-buttons">
+                            <button>
+                                <p>BACK</p>
+                            </button><button>
+                                <p>SEND</p>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="product-comments" id="product-comments">
+                    <h3>COMMENTS</h3>
+                    <div class="comment-input">
+                        <input type="text"> <button>
+                            <p>POST
+                            <p>
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-    <!-- end of product modal -->
 
-    <!-- jquery -->
-    <script src="https://kit.fontawesome.com/ab86417da5.js" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
-        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+        <!-- end of product modal -->
 
-    <!-- swiper js  -->
-    <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
+        <!-- jquery -->
+        <script src="https://kit.fontawesome.com/ab86417da5.js" crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+            integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+
+        <!-- swiper js  -->
+        <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-        crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+            crossorigin="anonymous"></script>
 
-    <!-- <script src="js/landingpage.js"></script> -->
-    <script src="js/swiper.js"></script>
-    <script src="js/script.js"></script>
+        <!-- <script src="js/landingpage.js"></script> -->
+        <script src="js/swiper.js"></script>
+        <script src="js/script.js"></script>
 </body>
 
 </html>
