--- a/frontend/shop.html
+++ b/frontend/shop.html
@@ -60,7 +60,9 @@
     </div>
     <div id="account-details">
       <div class="account-functions">
-        <p>ACCOUNT</p>
+        <a href="account.html">
+          <p>ACCOUNT</p>
+        </a>
       </div>
       <div class="account-functions">
         <p id="sign-out-button">LOGOUT</p>
@@ -105,64 +107,64 @@
   <footer>
     <div class="footer-top">
 
-        <div class="footer-top-info1 wrapper1" id="footer-top-info1">
-            <div class="title">
-                <p>Customer Care</p>
-            </div>
-            <div class="info">
-                <a href="#">Contact</a>
-                <a href="#">Delivery & Shipping</a>
-                <a href="#">Returns & Exchanges</a>
-                <a href="#">My Account</a>
-            </div>
+      <div class="footer-top-info1 wrapper1" id="footer-top-info1">
+        <div class="title">
+          <p>Customer Care</p>
+        </div>
+        <div class="info">
+          <a href="#">Contact</a>
+          <a href="#">Delivery & Shipping</a>
+          <a href="#">Returns & Exchanges</a>
+          <a href="#">My Account</a>
+        </div>
 
+      </div>
+      <div class="footer-top-header wrapper1" id="footer-top-header">
+        <p>Papori</p>
+      </div>
+      <div class="footer-top-info1 wrapper1 right" id="footer-top-info1 ">
+        <div class="title">
+          <p>Info</p>
         </div>
-        <div class="footer-top-header wrapper1" id="footer-top-header">
-            <p>Papori</p>
+        <div class="info">
+          <a href="#">Stockist</a>
+          <a href="#">Size Guide</a>
+          <a href="#">Privacy Policy</a>
+          <a href="#">Terms & Conditions</a>
         </div>
-        <div class="footer-top-info1 wrapper1 right" id="footer-top-info1 ">
-            <div class="title">
-                <p>Info</p>
-            </div>
-            <div class="info">
-                <a href="#">Stockist</a>
-                <a href="#">Size Guide</a>
-                <a href="#">Privacy Policy</a>
-                <a href="#">Terms & Conditions</a>
-            </div>
 
-        </div>
+      </div>
     </div>
     <div class="footer-middle">
-        <div class="socials wrapper1">
+      <div class="socials wrapper1">
 
-            <p>instagram</p>
-            <p>tiktok</p>
-            <p>facebook</p>
-            <p>twitter</p>
-        </div>
-        <div class="newsletter wrapper1">
-            <input type="text" name="newsletter" id="newsletter" placeholder="Email Address">
-            <button>Sign Me Up</button>
-        </div>
+        <p>instagram</p>
+        <p>tiktok</p>
+        <p>facebook</p>
+        <p>twitter</p>
+      </div>
+      <div class="newsletter wrapper1">
+        <input type="text" name="newsletter" id="newsletter" placeholder="Email Address">
+        <button>Sign Me Up</button>
+      </div>
     </div>
     <div class="footer-bottom">
-        <div class="copyright wrapper1">
-            <p>© 2021 Papori, all rights reserved.
-            </p>
-        </div>
-        <div class="footer-logo wrapper1">
-            <img src="../frontend/media/logo_papori_footer.svg" alt="logo_nav.svg">
-        </div>
-        <div class="conditions wrapper1">
-            <a href="#">Legal Notice</a>
-            <a href="#">Designed By BMJ</a>
-            <a href="#">Built by BMJ</a>
-        </div>
+      <div class="copyright wrapper1">
+        <p>© 2021 Papori, all rights reserved.
+        </p>
+      </div>
+      <div class="footer-logo wrapper1">
+        <img src="../frontend/media/logo_papori_footer.svg" alt="logo_nav.svg">
+      </div>
+      <div class="conditions wrapper1">
+        <a href="#">Legal Notice</a>
+        <a href="#">Designed By BMJ</a>
+        <a href="#">Built by BMJ</a>
+      </div>
     </div>
 
 
-</footer>
+  </footer>
 
   <!-- Edit Modal -->
   <div class="modal fade" id="editModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -247,13 +249,13 @@
             data-bs-dismiss="modal">CANCEL</button>
           <button id="submitDelete" name="submitDeleteButton" type="submit" class="btn btn-primary delete-button"
             data-bs-dismiss="modal">CONFIRM</button>
+        </div>
       </div>
     </div>
-    </div>
   </div>
-    <!-- End of Post Delete Modal  -->
+  <!-- End of Post Delete Modal  -->
 
-      <!-- product Modal -->
+  <!-- product Modal -->
   <div id="productModal" class="productModal">
     <div class="product-modal-container">
       <div class="product-modal-grid">
@@ -261,57 +263,64 @@
         <div id="product-image" class="product-image">
         </div>
         <div class="product-title">
-        <div id="product-name" class="product-name"></div>
-        <div id="product-owner" class="product-owner">
+          <div id="product-name" class="product-name"></div>
+          <div id="product-owner" class="product-owner">
+          </div>
+        </div>
+        <div id="modal-description" style="display: none;" class="modal-description">
+        </div>
+        <div class="modal-message-container">
+          <div class="name-underline"></div>
+          <div class="modal-message">
+            <h3>INQUIRE</h3>
+            <div class="modal-message-inputs">
+              <input placeholder="Write title here . . ." type="text">
+              <input class="modal-message-large" placeholder="Write message here . . ." type="text">
+            </div>
+            <div class="modal-message-buttons">
+              <button>
+                <p>BACK</p>
+              </button><button>
+                <p>SEND</p>
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="product-comments" id="product-comments">
+          <h3>COMMENTS</h3>
+          <div class="comment-input">
+            <input type="text"> <button>
+              <p>POST
+              <p>
+            </button>
+          </div>
         </div>
       </div>
-        <div id="modal-description" style="display: none;"  class="modal-description">
-      </div>
-      <div class="modal-message-container">
-      <div class="name-underline"></div>
-      <div class="modal-message">
-        <h3>INQUIRE</h3>
-        <div class="modal-message-inputs">
-        <input placeholder="Write title here . . ." type="text">
-        <input class="modal-message-large" placeholder="Write message here . . ." type="text">
-      </div>
-        <div class="modal-message-buttons">
-<button> <p>BACK</p></button><button><p>SEND</p></button>
+    </div>
+
+    <!-- end of product modal -->
+
+    <!-- Confirm Delete Modal -->
+    <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="deleteModalLabel">Confirm Delete</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+
+          </div>
+          <div class="modal-footer">
+            <button id="submitDelete" name="submitDeleteButton" type="submit" class="btn btn-primary delete-button"
+              data-bs-dismiss="modal">CONFIRM</button>
+
+          </div>
         </div>
+
       </div>
-      </div>
-       <div class="product-comments" id="product-comments">
-        <h3>COMMENTS</h3>
-        <div class="comment-input">
-          <input type="text"> <button><p>POST<p></button>
-        </div>
-       </div>
     </div>
   </div>
-
-  <!-- end of product modal -->
-
-     <!-- Confirm Delete Modal -->
-     <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="deleteModalLabel">Confirm Delete</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-
-                </div>
-                <div class="modal-footer">
-                    <button id="submitDelete" name="submitDeleteButton" type="submit"
-                        class="btn btn-primary delete-button" data-bs-dismiss="modal">CONFIRM</button>
-
-                </div>
-            </div>
-
-        </div>
-      </div>
-    </div>
 
 
   <div id="gallery0" style="display: none;"></div>
